--- a/index.html
+++ b/index.html
@@ -84,43 +84,197 @@
 				</div>
 				<div class="modbox-bd">
 					<ul class="areamenu clearfix">
-						<li><a href="">
+						<li>
+							<a href="">
 								<div class="imgbox">
 									<img src="img/img1.png">
 								</div>
 								<div class="tip">除虫灭鼠</div>
-							</a></li>
-						<li><a href="">
+							</a>
+						</li>
+						<li>
+							<a href="">
 								<div class="imgbox">
 									<img src="img/img2.png">
 								</div>
-								<div class="tip">白蚁防治</div>
-							</a></li>
-							<li><a href="">
-									<div class="imgbox">
-										<img src="img/img1.png">
-									</div>
-									<div class="tip">除虫灭鼠</div>
-								</a></li>
-							<li><a href="">
-									<div class="imgbox">
-										<img src="img/img2.png">
-									</div>
-									<div class="tip">白蚁防治</div>
-								</a></li>
-								<li><a href="">
-										<div class="imgbox">
-											<img src="img/img1.png">
-										</div>
-										<div class="tip">除虫灭鼠</div>
-									</a></li>
-								<li><a href="">
-										<div class="imgbox">
-											<img src="img/img2.png">
-										</div>
-										<div class="tip">白蚁防治</div>
-									</a></li>
+								<div class="tip">卫生消毒</div>
+							</a>
+						</li>
+						<li>
+							<a href="">
+								<div class="imgbox">
+									<img src="img/img3.png">
+								</div>
+								<div class="tip">蚊虫疫情监控</div>
+							</a>
+						</li>
+						<li>
+							<a href="">
+								<div class="imgbox">
+									<img src="img/img4.png">
+								</div>
+								<div class="tip">蚊虫疫情监控</div>
+							</a>
+						</li>
+						<li>
+							<a href="">
+								<div class="imgbox">
+									<img src="img/img5.png">
+								</div>
+								<div class="tip">药械销售</div>
+							</a>
+						</li>
+						<li><a href="">
+								<div class="imgbox">
+									<img src="img/img6.png">
+								</div>
+								<div class="tip">技术支持</div>
+							</a>
+						</li>
 					</ul>
+				</div>
+			</section>
+			<!-- 关于我们 -->
+			<section class="modbox mt20 aboutus">
+				<div class="modbox-hd">
+					<a href="">关于我们</a>
+				</div>
+				<div class="modbox-bd">
+					<div class="imgbox"><img src="img/video.jpg" alt=""></div>
+					<p class="mt20">广东福卡斯有害生物防控技术有限公司成立于2019年，依托广东福卡斯智能装备工程有限公司打造的一支专业的PCO有害生物防控技术服务机构，公司拥有技术研发中心、智能数据管理中心、培训中心、智能化设备中心、为了更专业服务社会，公司在有害生物领域上打造国际智能化一流的防控技术。</p>
+					<a href="" class="more">查看更多</a>
+				</div>
+			</section>
+			<!-- 我们的优势 -->
+			<section class="modbox mt20 youshi">
+				<div class="modbox-hd">
+					<a href="">我们的优势</a>
+				</div>
+				<div class="modbox-bd">
+					<p>公司在农林业害虫领域、森林有害生物防控、城市建筑白蚁治理、病媒生物防控体系中拥有资深的行业防治专家和专业技能一流的工程团队，
+						凭借多年的智能工程服务经验，结合了智能技术、智能思维和创新技术在工程实践中，取得了良好的前期工作成效。在病虫害防治过程中，我们应用国际智能化防控技术，我们时刻注重服务质量和环境保护......</p>
+					<ul class="menu clearfix">
+						<li><a href="">
+								<i class="icon1"></i>
+								<p>创新技术</p>
+							</a>
+						</li>
+						<li><a href="">
+								<i class="icon2"></i>
+								<p>智能设备</p>
+							</a>
+						</li>
+						<li><a href="">
+								<i class="icon3"></i>
+								<p>环保健康</p>
+							</a>
+						</li>
+						<li><a href="">
+								<i class="icon4"></i>
+								<p>智能管理</p>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</section>
+			<!-- 先进设备 -->
+			<section class="modbox mt20 equipment">
+				<div class="modbox-hd">
+					<a href="">先进设备</a>
+				</div>
+				<div class="modbox-bd">
+					<ul class="equlist clearfix">
+						<li><a href="">
+								<div class="imgbox flex flex-align-center">
+									<img src="img/demo/1.jpg" alt="">
+								</div>
+								<div>
+									<p>超低容量喷雾器系列</p>
+									<p>超前专利的运用</p>
+								</div>
+
+							</a>
+						</li>
+						<li><a href="">
+								<div class="imgbox flex flex-align-center">
+									<img src="img/demo/1.jpg" alt="">
+								</div>
+								<div>
+									<p>超低容量喷雾器系列</p>
+									<p>超前专利的运用</p>
+								</div>
+
+							</a>
+						</li>
+						<li><a href="">
+								<div class="imgbox flex flex-align-center">
+									<img src="img/demo/1.jpg" alt="">
+								</div>
+								<div>
+									<p>超低容量喷雾器系列</p>
+									<p>超前专利的运用</p>
+								</div>
+
+							</a>
+						</li>
+						<li><a href="">
+								<div class="imgbox flex flex-align-center">
+									<img src="img/demo/1.jpg" alt="">
+								</div>
+								<div>
+									<p>超低容量喷雾器系列</p>
+									<p>超前专利的运用</p>
+								</div>
+
+							</a>
+						</li>
+						<li><a href="">
+								<div class="imgbox flex flex-align-center">
+									<img src="img/demo/1.jpg" alt="">
+								</div>
+								<div>
+									<p>超低容量喷雾器系列</p>
+									<p>超前专利的运用</p>
+								</div>
+
+							</a>
+						</li>
+						<li><a href="">
+								<div class="imgbox flex flex-align-center">
+									<img src="img/demo/1.jpg" alt="">
+								</div>
+								<div>
+									<p>超低容量喷雾器系列</p>
+									<p>超前专利的运用</p>
+								</div>
+
+							</a>
+						</li>
+					</ul>
+				</div>
+			</section>
+			<section class="modbox mt20 equipment">
+				<div class="modbox-hd">
+					<a href="">我们的团队</a>
+				</div>
+				<div class="modbox-bd">
+					
+				</div>
+			</section>
+			<section class="modbox mt20 news">
+				<div class="modbox-hd">
+					<a href="">新闻资讯</a>
+				</div>
+				<div class="modbox-bd">
+					<div class="news-item">
+						<a href="">
+							<img src="img/demo/3.jpg" >
+						<div class="tip">
+							<div class="name">宾馆行业蟑螂的危害和综合防制</div>
+						<div class="time mt5"><i></i><span>2019-09-06</span></div>
+						</div>
+						</a>
+					</div>
 				</div>
 			</section>
 		</div>
