--- a/hzkh.html
+++ b/hzkh.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>荣誉资质</title>
+		<title>合作客户</title>
 		<meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width" />
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="app-mobile-web-app-capable" content="yes" />
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="css/swiper.min.css" />
 		<link rel="stylesheet" href="css/base.css">
 	</head>
-	<body >
+	<body class="bgf7">
 		<div class="header flex flex-pack-justify">
 			<a href="" class="logo">
 				<img src="img/logo.png" alt="">
@@ -79,57 +79,54 @@
 			<img src="img/banner2.jpg" alt="">
 		</div>
 		<div class="main">
-			<div class="tabnav">
+			<div class="tabnav onetabnav">
 				<div>
-					<a href="">公司介绍</a>
-					<a href="" class="active">荣誉资质</a>
-					<a href="">专家团队</a>
-					<a href="">先进设备</a>
+					<a href="" class="active">合作客户</a>	
 				</div>
 			</div>
-			<div  id="certify" class="honorbox">
-				<div class="tablink">
-					<a href="" class="active"><img src="img/icon12.png" alt=""><span>公司荣誉</span></a>
-					<a href=""><img src="img/icon13.png" alt=""><span>权威认证</span></a>
-					<a href=""><img src="img/icon14.png" alt=""><span>专业资质</span></a>
+			<div class="friendlist">
+				<ul class="clearfix">
+					<li><a href="">
+							<img src="img/demo/logo.png">
+						</a>
+					</li>
+					<li><a href="">
+							<img src="img/demo/logo.png">
+						</a>
+					</li>
+					<li><a href="">
+							<img src="img/demo/logo.png">
+						</a>
+					</li>
+					<li><a href="">
+							<img src="img/demo/logo.png">
+						</a>
+					</li>
+					<li><a href="">
+							<img src="img/demo/logo.png">
+						</a>
+					</li>
+					<li><a href="">
+							<img src="img/demo/logo.png">
+						</a>
+					</li>
+					<li><a href="">
+							<img src="img/demo/logo.png">
+						</a>
+					</li>
+					<li><a href="">
+							<img src="img/demo/logo.png">
+						</a>
+					</li>
+					<li><a href="">
+							<img src="img/demo/logo.png">
+						</a>
+					</li>
+				</ul>
+				<div class="page">
+					<a href="" class="prev"></a>
+					<a href="" class="next"></a>
 				</div>
-				<div class="swiper-container">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
-							</div>
-							<p class="name">福卡斯人的服务理念</p>
-						</div>
-						<div class="swiper-slide">
-							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
-							</div>
-							<p class="name">福卡斯人的服务理念</p>
-						</div>
-						<div class="swiper-slide">
-							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
-							</div>
-							<p class="name">福卡斯人的服务理念</p>
-						</div>
-						<div class="swiper-slide">
-							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
-							</div>
-							<p class="name">福卡斯人的服务理念</p>
-						</div>
-						<div class="swiper-slide">
-							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
-							</div>
-							<p class="name">福卡斯人的服务理念</p>
-						</div>
-					</div>
-				</div>
-				<div class="swiper-button-prev"></div>
-				<div class="swiper-button-next"></div>
-
 			</div>
 		</div>
 		<div class="footer">
