--- a/kpzs.html
+++ b/kpzs.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>荣誉资质</title>
+		<title>客服知识</title>
 		<meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width" />
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="app-mobile-web-app-capable" content="yes" />
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="css/swiper.min.css" />
 		<link rel="stylesheet" href="css/base.css">
 	</head>
-	<body >
+	<body class="bgf7">
 		<div class="header flex flex-pack-justify">
 			<a href="" class="logo">
 				<img src="img/logo.png" alt="">
@@ -76,60 +76,63 @@
 			</div>
 		</div>
 		<div class="banner">
-			<img src="img/banner2.jpg" alt="">
+			<img src="img/banner3.jpg" alt="">
 		</div>
 		<div class="main">
-			<div class="tabnav">
+			<div class="tabnav onetabnav">
 				<div>
-					<a href="">公司介绍</a>
-					<a href="" class="active">荣誉资质</a>
-					<a href="">专家团队</a>
-					<a href="">先进设备</a>
+					<a href="" class="active">科普知识</a>	
 				</div>
 			</div>
-			<div  id="certify" class="honorbox">
-				<div class="tablink">
-					<a href="" class="active"><img src="img/icon12.png" alt=""><span>公司荣誉</span></a>
-					<a href=""><img src="img/icon13.png" alt=""><span>权威认证</span></a>
-					<a href=""><img src="img/icon14.png" alt=""><span>专业资质</span></a>
-				</div>
-				<div class="swiper-container">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
+			<div class="knowlist">
+				<ul class="clearfix">
+					<li><a href="" class="flex">
+							<div class="imgbox" >
+								<img src="img/demo/7.jpg" >
 							</div>
-							<p class="name">福卡斯人的服务理念</p>
-						</div>
-						<div class="swiper-slide">
-							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
+							<div class="flex-1">
+								<div class="name">酒店宾馆鼠害防治技术与方法</div>
+								<div class="time">2019年10月1日</div>
+								<p>老鼠是宾馆酒店有害生物防治中的重点，因为鼠类可直接把病菌传给人或通过体外寄生物间接传给人，目前已证实能携带和传播的疾病达百种</p>
 							</div>
-							<p class="name">福卡斯人的服务理念</p>
-						</div>
-						<div class="swiper-slide">
-							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
+						</a>
+					</li>
+					<li><a href="" class="flex">
+							<div class="imgbox" >
+								<img src="img/demo/7.jpg" >
 							</div>
-							<p class="name">福卡斯人的服务理念</p>
-						</div>
-						<div class="swiper-slide">
-							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
+							<div class="flex-1">
+								<div class="name">酒店宾馆鼠害防治技术与方法</div>
+								<div class="time">2019年10月1日</div>
+								<p>老鼠是宾馆酒店有害生物防治中的重点，因为鼠类可直接把病菌传给人或通过体外寄生物间接传给人，目前已证实能携带和传播的疾病达百种</p>
 							</div>
-							<p class="name">福卡斯人的服务理念</p>
-						</div>
-						<div class="swiper-slide">
-							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
+						</a>
+					</li>
+					<li><a href="" class="flex">
+							<div class="imgbox" >
+								<img src="img/demo/7.jpg" >
 							</div>
-							<p class="name">福卡斯人的服务理念</p>
-						</div>
-					</div>
-				</div>
-				<div class="swiper-button-prev"></div>
-				<div class="swiper-button-next"></div>
-
+							<div class="flex-1">
+								<div class="name">酒店宾馆鼠害防治技术与方法</div>
+								<div class="time">2019年10月1日</div>
+								<p>老鼠是宾馆酒店有害生物防治中的重点，因为鼠类可直接把病菌传给人或通过体外寄生物间接传给人，目前已证实能携带和传播的疾病达百种</p>
+							</div>
+						</a>
+					</li>
+					<li><a href="" class="flex">
+							<div class="imgbox" >
+								<img src="img/demo/7.jpg" >
+							</div>
+							<div class="flex-1">
+								<div class="name">酒店宾馆鼠害防治技术与方法</div>
+								<div class="time">2019年10月1日</div>
+								<p>老鼠是宾馆酒店有害生物防治中的重点，因为鼠类可直接把病菌传给人或通过体外寄生物间接传给人，目前已证实能携带和传播的疾病达百种</p>
+							</div>
+						</a>
+					</li>
+					
+				</ul>
+				
 			</div>
 		</div>
 		<div class="footer">
