--- a/qywh.html
+++ b/qywh.html
@@ -87,42 +87,27 @@
 					<a href="">先进设备</a>
 				</div>
 			</div>
-			<div  id="certify" class="honorbox">
-				<div class="tablink">
-					<a href="" class="active"><img src="img/icon12.png" alt=""><span>公司荣誉</span></a>
-					<a href=""><img src="img/icon13.png" alt=""><span>权威认证</span></a>
-					<a href=""><img src="img/icon14.png" alt=""><span>专业资质</span></a>
-				</div>
+			<div  id="certify">
 				<div class="swiper-container">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
-							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
-							</div>
+							<p>1福卡斯的服务理念取决于我们员工的优秀 技术服务水平、福卡斯的管理系统是最好的，同时我们的员工还拥有为各行各业服务的丰富经验。一旦您和福卡斯签署服务协议，您将体会到我们服务技术人员贴心而专业的虫害防制服务。</p>
 							<p class="name">福卡斯人的服务理念</p>
 						</div>
 						<div class="swiper-slide">
-							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
-							</div>
+							<p>2福卡斯的服务理念取决于我们员工的优秀 技术服务水平、福卡斯的管理系统是最好的，同时我们的员工还拥有为各行各业服务的丰富经验。一旦您和福卡斯签署服务协议，您将体会到我们服务技术人员贴心而专业的虫害防制服务。</p>
 							<p class="name">福卡斯人的服务理念</p>
 						</div>
 						<div class="swiper-slide">
-							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
-							</div>
+							<p>3福卡斯的服务理念取决于我们员工的优秀 技术服务水平、福卡斯的管理系统是最好的，同时我们的员工还拥有为各行各业服务的丰富经验。一旦您和福卡斯签署服务协议，您将体会到我们服务技术人员贴心而专业的虫害防制服务。</p>
 							<p class="name">福卡斯人的服务理念</p>
 						</div>
 						<div class="swiper-slide">
-							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
-							</div>
+							<p>4福卡斯的服务理念取决于我们员工的优秀 技术服务水平、福卡斯的管理系统是最好的，同时我们的员工还拥有为各行各业服务的丰富经验。一旦您和福卡斯签署服务协议，您将体会到我们服务技术人员贴心而专业的虫害防制服务。</p>
 							<p class="name">福卡斯人的服务理念</p>
 						</div>
 						<div class="swiper-slide">
-							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
-							</div>
+							<p>5福卡斯的服务理念取决于我们员工的优秀 技术服务水平、福卡斯的管理系统是最好的，同时我们的员工还拥有为各行各业服务的丰富经验。一旦您和福卡斯签署服务协议，您将体会到我们服务技术人员贴心而专业的虫害防制服务。</p>
 							<p class="name">福卡斯人的服务理念</p>
 						</div>
 					</div>
