--- a/zjtd.html
+++ b/zjtd.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>荣誉资质</title>
+		<title>先进设备</title>
 		<meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width" />
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="app-mobile-web-app-capable" content="yes" />
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="css/swiper.min.css" />
 		<link rel="stylesheet" href="css/base.css">
 	</head>
-	<body >
+	<body class="bgf7">
 		<div class="header flex flex-pack-justify">
 			<a href="" class="logo">
 				<img src="img/logo.png" alt="">
@@ -82,54 +82,80 @@
 			<div class="tabnav">
 				<div>
 					<a href="">公司介绍</a>
-					<a href="" class="active">荣誉资质</a>
-					<a href="">专家团队</a>
-					<a href="">先进设备</a>
+					<a href="">荣誉资质</a>
+					<a href="" class="active">专家团队</a>
+					<a href="" >先进设备</a>
 				</div>
 			</div>
-			<div  id="certify" class="honorbox">
-				<div class="tablink">
-					<a href="" class="active"><img src="img/icon12.png" alt=""><span>公司荣誉</span></a>
-					<a href=""><img src="img/icon13.png" alt=""><span>权威认证</span></a>
-					<a href=""><img src="img/icon14.png" alt=""><span>专业资质</span></a>
-				</div>
-				<div class="swiper-container">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
+			<div class="teamlist">
+				<ul class="clearfix">
+					<li>
+						<a href="">
 							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
+								<img src="img/demo/2.jpg">
 							</div>
-							<p class="name">福卡斯人的服务理念</p>
-						</div>
-						<div class="swiper-slide">
+							<div>
+								<p>袁隆平</p>
+								<p>有害生物防治专家</p>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="">
 							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
+								<img src="img/demo/2.jpg">
 							</div>
-							<p class="name">福卡斯人的服务理念</p>
-						</div>
-						<div class="swiper-slide">
+							<div>
+								<p>袁隆平</p>
+								<p>有害生物防治专家</p>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="">
 							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
+								<img src="img/demo/2.jpg">
 							</div>
-							<p class="name">福卡斯人的服务理念</p>
-						</div>
-						<div class="swiper-slide">
+							<div>
+								<p>袁隆平</p>
+								<p>有害生物防治专家</p>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="">
 							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
+								<img src="img/demo/2.jpg">
 							</div>
-							<p class="name">福卡斯人的服务理念</p>
-						</div>
-						<div class="swiper-slide">
+							<div>
+								<p>袁隆平</p>
+								<p>有害生物防治专家</p>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="">
 							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
+								<img src="img/demo/2.jpg">
 							</div>
-							<p class="name">福卡斯人的服务理念</p>
-						</div>
-					</div>
-				</div>
-				<div class="swiper-button-prev"></div>
-				<div class="swiper-button-next"></div>
-
+							<div>
+								<p>袁隆平</p>
+								<p>有害生物防治专家</p>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<div class="imgbox">
+								<img src="img/demo/2.jpg">
+							</div>
+							<div>
+								<p>袁隆平</p>
+								<p>有害生物防治专家</p>
+							</div>
+						</a>
+					</li>
+				</ul>
 			</div>
 		</div>
 		<div class="footer">
