--- a/lxwm.html
+++ b/lxwm.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>荣誉资质</title>
+		<title>联系我们</title>
 		<meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width" />
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="app-mobile-web-app-capable" content="yes" />
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="css/swiper.min.css" />
 		<link rel="stylesheet" href="css/base.css">
 	</head>
-	<body >
+	<body class="bgf7">
 		<div class="header flex flex-pack-justify">
 			<a href="" class="logo">
 				<img src="img/logo.png" alt="">
@@ -76,60 +76,22 @@
 			</div>
 		</div>
 		<div class="banner">
-			<img src="img/banner2.jpg" alt="">
+			<img src="img/banner3.jpg" alt="">
 		</div>
 		<div class="main">
-			<div class="tabnav">
+			<div class="tabnav onetabnav">
 				<div>
-					<a href="">公司介绍</a>
-					<a href="" class="active">荣誉资质</a>
-					<a href="">专家团队</a>
-					<a href="">先进设备</a>
+					<a href="" class="active">联系我们</a>
 				</div>
 			</div>
-			<div  id="certify" class="honorbox">
-				<div class="tablink">
-					<a href="" class="active"><img src="img/icon12.png" alt=""><span>公司荣誉</span></a>
-					<a href=""><img src="img/icon13.png" alt=""><span>权威认证</span></a>
-					<a href=""><img src="img/icon14.png" alt=""><span>专业资质</span></a>
-				</div>
-				<div class="swiper-container">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
-							</div>
-							<p class="name">福卡斯人的服务理念</p>
-						</div>
-						<div class="swiper-slide">
-							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
-							</div>
-							<p class="name">福卡斯人的服务理念</p>
-						</div>
-						<div class="swiper-slide">
-							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
-							</div>
-							<p class="name">福卡斯人的服务理念</p>
-						</div>
-						<div class="swiper-slide">
-							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
-							</div>
-							<p class="name">福卡斯人的服务理念</p>
-						</div>
-						<div class="swiper-slide">
-							<div class="imgbox">
-								<img src="img/demo/6.jpg" alt="">
-							</div>
-							<p class="name">福卡斯人的服务理念</p>
-						</div>
-					</div>
-				</div>
-				<div class="swiper-button-prev"></div>
-				<div class="swiper-button-next"></div>
-
+			<div class="company">
+				<p class="name">广东福卡斯有害生物防控技术有限公司</p>
+				<p>邮编：100193</p>
+				<p>邮箱：contact@isoftstone.com</p>
+				<p>电话：+86 105874 9000</p>
+				<p>传真：+86 105874 9001</p>
+				<p>地址：北京市海淀区西北旺东路10号院东区16号楼</p>
+				<img src="img/map.jpg" >
 			</div>
 		</div>
 		<div class="footer">
