--- a/hyly.html
+++ b/hyly.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>联系我们</title>
+		<title>行业领域</title>
 		<meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width" />
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="app-mobile-web-app-capable" content="yes" />
@@ -76,49 +76,81 @@
 			</div>
 		</div>
 		<div class="banner">
-			<img src="img/banner3.jpg" alt="">
+			<img src="img/banner7.jpg" alt="">
 		</div>
 		<div class="main">
-			<div class="tabnav onetabnav">
+			<div class="tabnav">
 				<div>
-					<a href="" class="active">联系我们</a>
+					<a href="" class="active ">除虫灭鼠</a>
+					<a href="">白蚁防治</a>
+					<a href="">卫生消毒</a>
+					<a href="">蚁虫疫情监控</a>
 				</div>
 			</div>
-			<div class="company">
-				<p class="name">广东福卡斯有害生物防控技术有限公司</p>
-				<p>邮编：100193</p>
-				<p>邮箱：contact@isoftstone.com</p>
-				<p>电话：+86 105874 9000</p>
-				<p>传真：+86 105874 9001</p>
-				<p>地址：北京市海淀区西北旺东路10号院东区16号楼</p>
-				<img src="img/map.jpg" >
-			</div>
-			<div class="contact mt20">
-				<div class="name">联系我们</div>
-				<div class="input-group">
-					<div class="input-row">
-						<div>姓名：</div>
-						<input type="text">
-					</div>
-					<div class="input-row">
-						<div>公司：</div>
-						<input type="text">
-					</div>
-					<div class="input-row">
-						<div>电话：</div>
-						<input type="text">
-					</div>
-					<div class="input-row">
-						<div>邮箱：</div>
-						<input type="text">
-					</div>
-					<div class="input-row">
-						<div>描述：</div>
-						<textarea rows="4" cols="">
-							
-						</textarea>
-					</div>
-				</div>
+			<div class="arealist">
+				<ul class="clearfix">
+					<li><a href="">
+							<div class="imgbox">
+								<img src="img/demo/9.jpg">
+							</div>
+							<div class="txt">
+								<div>鼠害防治</div>
+								<p>在重点区域内根据实际情况 采用不同装置灭杀老鼠采用不同装置灭杀老鼠</p>
+							</div>
+						</a>
+					</li>
+					<li><a href="">
+							<div class="imgbox">
+								<img src="img/demo/9.jpg">
+							</div>
+							<div class="txt">
+								<div>鼠害防治</div>
+								<p>在重点区域内根据实际情况 采用不同装置灭杀老鼠</p>
+							</div>
+						</a>
+					</li>
+					<li><a href="">
+							<div class="imgbox">
+								<img src="img/demo/9.jpg">
+							</div>
+							<div class="txt">
+								<div>鼠害防治</div>
+								<p>在重点区域内根据实际情况 采用不同装置灭杀老鼠</p>
+							</div>
+						</a>
+					</li>
+					<li><a href="">
+							<div class="imgbox">
+								<img src="img/demo/9.jpg">
+							</div>
+							<div class="txt">
+								<div>鼠害防治</div>
+								<p>在重点区域内根据实际情况 采用不同装置灭杀老鼠</p>
+							</div>
+						</a>
+					</li>
+					<li><a href="">
+							<div class="imgbox">
+								<img src="img/demo/9.jpg">
+							</div>
+							<div class="txt">
+								<div>鼠害防治</div>
+								<p>在重点区域内根据实际情况 采用不同装置灭杀老鼠</p>
+							</div>
+						</a>
+					</li>
+					<li><a href="">
+							<div class="imgbox">
+								<img src="img/demo/9.jpg">
+							</div>
+							<div class="txt">
+								<div>鼠害防治</div>
+								<p>在重点区域内根据实际情况 采用不同装置灭杀老鼠</p>
+							</div>
+						</a>
+					</li>
+				</ul>
+
 			</div>
 		</div>
 		<div class="footer">
