--- a/shfw.html
+++ b/shfw.html
@@ -81,44 +81,11 @@
 		<div class="main">
 			<div class="tabnav onetabnav">
 				<div>
-					<a href="" class="active">联系我们</a>
+					<a href="" class="active">售后服务受理流程</a>
 				</div>
 			</div>
-			<div class="company">
-				<p class="name">广东福卡斯有害生物防控技术有限公司</p>
-				<p>邮编：100193</p>
-				<p>邮箱：contact@isoftstone.com</p>
-				<p>电话：+86 105874 9000</p>
-				<p>传真：+86 105874 9001</p>
-				<p>地址：北京市海淀区西北旺东路10号院东区16号楼</p>
-				<img src="img/map.jpg" >
-			</div>
-			<div class="contact mt20">
-				<div class="name">联系我们</div>
-				<div class="input-group">
-					<div class="input-row">
-						<div>姓名：</div>
-						<input type="text">
-					</div>
-					<div class="input-row">
-						<div>公司：</div>
-						<input type="text">
-					</div>
-					<div class="input-row">
-						<div>电话：</div>
-						<input type="text">
-					</div>
-					<div class="input-row">
-						<div>邮箱：</div>
-						<input type="text">
-					</div>
-					<div class="input-row">
-						<div>描述：</div>
-						<textarea rows="4" cols="">
-							
-						</textarea>
-					</div>
-				</div>
+			<div class="service">
+				<img src="img/service.png" >
 			</div>
 		</div>
 		<div class="footer">
