--- a/hzkh.html
+++ b/hzkh.html
@@ -81,11 +81,108 @@
 		<div class="main">
 			<div class="tabnav onetabnav">
 				<div>
-					<a href="" class="active">合作客户</a>	
+					<a href="" class="active">合作客户</a>
 				</div>
 			</div>
 			<div class="friendlist">
-				<ul class="clearfix">
+				<div class="swiper-container">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<a href="">
+								<img src="img/demo/logo.png">
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="">
+								<img src="img/demo/logo.png">
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="">
+								<img src="img/demo/logo.png">
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="">
+								<img src="img/demo/logo.png">
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="">
+								<img src="img/demo/logo.png">
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="">
+								<img src="img/demo/logo.png">
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="">
+								<img src="img/demo/logo.png">
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="">
+								<img src="img/demo/logo.png">
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="">
+								<img src="img/demo/logo.png">
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="">
+								<img src="img/demo/logo.png">
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="">
+								<img src="img/demo/logo.png">
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="">
+								<img src="img/demo/logo.png">
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="">
+								<img src="img/demo/logo.png">
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="">
+								<img src="img/demo/logo.png">
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="">
+								<img src="img/demo/logo.png">
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="">
+								<img src="img/demo/logo.png">
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="">
+								<img src="img/demo/logo.png">
+							</a>
+						</div>
+						<div class="swiper-slide">
+							<a href="">
+								<img src="img/demo/logo.png">
+							</a>
+						</div>
+						
+					</div>
+				</div>
+				<div class="swiper-button-prev"></div>
+				<div class="swiper-button-next"></div>
+				<!-- <ul class="clearfix">
 					<li><a href="">
 							<img src="img/demo/logo.png">
 						</a>
@@ -126,7 +223,7 @@
 				<div class="page">
 					<a href="" class="prev"></a>
 					<a href="" class="next"></a>
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<div class="footer">
@@ -148,46 +245,17 @@
 <script src="js/jquery-1.10.1.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/common.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/swiper.min.js" type="text/javascript" charset="utf-8"></script>
-<script>
-	certifySwiper = new Swiper('#certify .swiper-container', {
-		watchSlidesProgress: true,
-		slidesPerView: 'auto',
-		centeredSlides: true,
-		loop: true,
-		loopedSlides: 5,
-		autoplay: true,
-		navigation: {
-			nextEl: '.swiper-button-next',
-			prevEl: '.swiper-button-prev',
-		},
-		on: {
-			progress: function(progress) {
-				for (i = 0; i < this.slides.length; i++) {
-					var slide = this.slides.eq(i);
-					var slideProgress = this.slides[i].progress;
-					modify = 1;
-					if (Math.abs(slideProgress) > 1) {
-						modify = (Math.abs(slideProgress) - 1) * 0.3 + 1;
-					}
-					translate = slideProgress * modify * 100 + 'px';
-					scale = 1 - Math.abs(slideProgress) / 5;
-					zIndex = 999 - Math.abs(Math.round(10 * slideProgress));
-					slide.transform('translateX(' + translate + ') scale(' + scale + ')');
-					slide.css('zIndex', zIndex);
-					slide.css('opacity', 1);
-					if (Math.abs(slideProgress) > 3) {
-						slide.css('opacity', 0);
-					}
-				}
-			},
-			setTransition: function(transition) {
-				for (var i = 0; i < this.slides.length; i++) {
-					var slide = this.slides.eq(i)
-					slide.transition(transition);
-				}
-
-			}
-		}
-
-	})
-</script>
+ <script>
+	    var swiper = new Swiper('.swiper-container', {
+	      slidesPerView: 3,
+	      slidesPerColumn: 3,
+		  slidesPerGroup: 3,
+	      spaceBetween: 15,
+		  // loop: true,
+		  // loopFillGroupWithBlank: true,
+	    navigation: {
+	    	nextEl: '.swiper-button-next',
+	    	prevEl: '.swiper-button-prev',
+	    },
+	    });
+	  </script>
